tests/ui/rfcs/rfc-2093-infer-outlives/enum.stderr
error: rustc_outlives
  --> $DIR/enum.rs:7:1
   |
LL | enum Foo<'a, T> {
   | ^^^^^^^^^^^^^^^
   |
   = note: T: 'a

error: rustc_outlives
  --> $DIR/enum.rs:14:1
   |
LL | struct Bar<'b, U> {
   | ^^^^^^^^^^^^^^^^^
   |
   = note: U: 'b

error: rustc_outlives
  --> $DIR/enum.rs:21:1
   |
LL | enum Ying<'c, K> {
   | ^^^^^^^^^^^^^^^^
   |
   = note: K: 'c

error[E0640]: rustc_outlives
  --> $DIR/enum.rs:7:1
   |
LL | enum Foo<'a, T> {
   | ^^^^^^^^^^^^^^^
   |
note: T: 'a
  --> $DIR/enum.rs:16:5
   |
LL |     field2: &'b U
   |     ^^^^^^^^^^^^^

error[E0640]: rustc_outlives
  --> $DIR/enum.rs:14:1
   |
LL | struct Bar<'b, U> {
   | ^^^^^^^^^^^^^^^^^
   |
note: U: 'b
  --> $DIR/enum.rs:16:5
   |
LL |     field2: &'b U
   |     ^^^^^^^^^^^^^

error[E0640]: rustc_outlives
  --> $DIR/enum.rs:21:1
   |
LL | enum Ying<'c, K> {
   | ^^^^^^^^^^^^^^^^
   |
note: K: 'c
  --> $DIR/enum.rs:23:9
   |
LL |     One(&'c Yang<K>)
   |         ^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0640`.
